ajout cluster google map et formulaire autocomplete

--- a/views/api/api.html.twig
+++ b/views/api/api.html.twig
@@ -1,7 +1,12 @@
-[
-{% for article in articles %}
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<markers>
+    {% for article in articles %}
+        <marker id="{{ article.id }}" name="{{ article.title }}" address="1/28 Macleay Street, Elizabeth Bay, NSW" lat={{ article.position|replace({",": " lng=", '%that%':80}) }} type="restaurant"/>
+    {% endfor %}
+</markers>
 
-{"image":"./images/1533126-3.jpg","number":31705,"name":"31705 {{ article.title|upper }}  - CHAMPEAUX (BAGNOLET)","address":"RUE DES CHAMPEAUX {{ article.content }} - 93170 BAGNOLET","position":{"lat":48.8645278209514,"lng":2.416170724425901},"banking":true,"bonus":true,"status":"OPEN","contract_name":"Paris","bike_stands":50,"available_bike_stands":45,"available_bikes":4,"last_update":1507326804000},
 
-{% endfor %}
-{"image":"./images/1533126-3.jpg","number":31705,"name":"31705 .First article. - CHAMPEAUX (BAGNOLET)","address":"RUE DES CHAMPEAUX (PRES DE LA GARE ROUTIERE) - 93170 BAGNOLET","position":{"lat":48.8645278209514,"lng":2.416170724425901},"banking":true,"bonus":true,"status":"OPEN","contract_name":"Paris","bike_stands":50,"available_bike_stands":45,"available_bikes":4,"last_update":1507326804000}]
+
+
+
+
