--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -79,7 +79,7 @@
 
 <div id="formulaire-recherche">
     <form action="liste/" method="get">
-        <p class="queFaire">QUE FAIRE  <i class="fa fa-bicycle fa-min fa-cat" aria-hidden="true" title="Loisirs"></i> <i class="fa fa-map-o fa-min fa-cat" aria-hidden="true" title="Plans"></i> <i class="fa fa-map-signs fa-min fa-cat" aria-hidden="true" title="circuit. Voyage avec guide"></i> <i class="fa fa-cutlery fa-min fa-cat" aria-hidden="true" title="Restaurant, fast food et epiceries"></i> <i class="fa fa-bed fa-min fa-cat" aria-hidden="true" title="hôtel, gîte et camping"></i> </p>
+        <p class="queFaire">QUE FAIRE  <A HREF="liste/" title="activités"> <i class="fa fa-bicycle fa-min fa-cat" aria-hidden="true" title="Loisirs"></i></A> <a href="geoloc" title="PLANS"><i class="fa fa-map-o fa-min fa-cat" aria-hidden="true" title="Plans"></i></a> <i class="fa fa-map-signs fa-min fa-cat" aria-hidden="true" title="circuit. Voyage avec guide"></i> <i class="fa fa-cutlery fa-min fa-cat" aria-hidden="true" title="Restaurant, fast food et epiceries"></i> <i class="fa fa-bed fa-min fa-cat" aria-hidden="true" title="hôtel, gîte et camping"></i> </p>
         <input type="hidden"  name="page" value="2" >
 
         <i class="fa fa-map-marker fa-min ico-recherche" aria-hidden="true" title="Loisirs"></i><input id="pac-input" placeholder="Départ" name="depart">
@@ -114,7 +114,7 @@
     {% endblock %}
 
 
-</div>
+
 
 
 
