--- a/web/css/style.css
+++ b/web/css/style.css
@@ -430,13 +430,19 @@ img.liste-main-unique {
 .liste-main-resultat {
     display: inline-block;
     background-color: #F6F7F8;
-    height: 100px;
+    height: 150px;
 }
 
 .liste-resultat {
-    display: inline-flex;
+    display: flex;
     margin-bottom: 20px;
     background-color: #F6F7F8;
+}
+
+.promo-acceuil {
+    display: inline-block;
+    background-color: #F6F7F8;
+    height: 250px;
 }
 
 .ico-recherche {
